增加http代理，增加tp2 rce

--- a/src/main/resources/com/thinkphp/thinkphpgui/thinkphp-view.fxml
+++ b/src/main/resources/com/thinkphp/thinkphpgui/thinkphp-view.fxml
@@ -25,7 +25,7 @@
                     <menus>
                         <Menu mnemonicParsing="false" text="配置">
                             <items>
-                                <MenuItem mnemonicParsing="false" text="常规配置" />
+                                <MenuItem mnemonicParsing="false" onAction="#proxy_set" text="代理配置" />
                             </items>
                         </Menu>
                         <Menu mnemonicParsing="false" text="关于">
